--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"dependencies": {
 		"@smogon/calc": "^0.8.1",
 		"colors": "1.1.2",
+		"object-hash": "^2.2.0",
 		"websocket": "^1.0.34"
 	},
 	"engines": {
