--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
 		"@smogon/calc": "^0.8.1",
 		"colors": "1.1.2",
 		"object-hash": "^2.2.0",
-		"websocket": "^1.0.34"
+		"websocket": "^1.0.34",
+		"pokemon-showdown": "^0.11.9"
 	},
 	"engines": {
-		"node": ">= 4.0.0"
+		"node": ">= 4.0.0 <19"
 	},
 	"scripts": {
 		"start": "node main.js"
